--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.3",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "2.15.4",
     "resend": "^6.4.1",
     "sonner": "^2.0.7",
@@ -52,7 +52,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.6",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
